Homework_3 done
